--- a/apps/templates/search_results.html
+++ b/apps/templates/search_results.html
@@ -14,7 +14,11 @@
         action="{% url 'search' %}" method="get" accept-charset="utf-8">
         <span uk-search-icon></span>
         <input class="uk-search-input" type="text" placeholder="Search this volume" aria-label="Search" name="q"
-          value="{{request.GET.q}}">
+          value="{{request.GET.q}}" style="width: 80%;">
+        <span title="Click to include partial matches">Partial</span>
+        <input type="radio" name="type" aria-label="include partial" value="partial" checked>
+        <span title="Click for exact matches only">Exact</span>
+        <input type="radio" name="type" aria-label="exact only" value="exact">
         <!-- <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
       </form>
       </div>
@@ -51,7 +55,7 @@
       </a>{% endif %}{% endfor %}
     </div>
     <div class="uk-width-3-4@m">
-      <a class="nav-link" href="https://{{ request.META.HTTP_HOST }}{% url 'volumeall' volume.pid %}?q={{ request.GET.q }}" target="_blank">
+      <a class="nav-link" href="https://{{ request.META.HTTP_HOST }}{% url 'volumeall' volume.pid %}?q={{ request.GET.q }}&type={{ request.GET.type }}" target="_blank">
         <h3 class="rx-card-title uk-margin-remove-bottom">{{ volume.label|truncatechars:100 }}</h3>
       </a>
       <ul class="uk-padding-remove uk-margin-remove rx-card-text">
@@ -93,7 +97,7 @@
       </a>{% endif %}{% endfor %}
     </div>
     <div class="uk-width-3-4@m">
-      <a class="nav-link" href="https://{{ request.META.HTTP_HOST }}{% url 'volumeall' volume.pid %}?q={{ request.GET.q }}" target="_blank">
+      <a class="nav-link" href="https://{{ request.META.HTTP_HOST }}{% url 'volumeall' volume.pid %}?q={{ request.GET.q }}&type={{ request.GET.type }}" target="_blank">
         <h3 class="rx-card-title uk-margin-remove-bottom">{{ volume.label|truncatechars:100 }}</h3>
       </a>
       <ul class="uk-padding-remove uk-margin-remove rx-card-text">
