--- a/apps/templates/search_results.html
+++ b/apps/templates/search_results.html
@@ -39,8 +39,8 @@
 {% if search_string %}
 <div><span class="rx-card-title uk-margin-remove-bottom">Filter by Collection: </span>
 {% for option in COL_LIST %}
-<a href="https://{{ request.META.HTTP_HOST }}{{ request.path }}?q={{ request.GET.q }}&collection={{ option.pid }}"><button class="rx-btn rx-btn-extension rx-btn-small">{{ option.label }}</button></a>  
-{% endfor %}  <a href="https://{{ request.META.HTTP_HOST }}{{ request.path }}?q={{ request.GET.q }}"><button class="rx-btn rx-btn-extension rx-btn-small">ALL</button></a>
+<a href="https://{{ request.META.HTTP_HOST }}{{ request.path }}?q={{ request.GET.q }}&collection={{ option.pid }}&type={{ request.GET.type }}"><button class="rx-btn rx-btn-extension rx-btn-small">{{ option.label }}</button></a>  
+{% endfor %}  <a href="https://{{ request.META.HTTP_HOST }}{{ request.path }}?q={{ request.GET.q }}&type={{ request.GET.type }}"><button class="rx-btn rx-btn-extension rx-btn-small">ALL</button></a>
 </div>{% endif %}
     {% if "?q=" in request.get_full_path %}      
 {% if qs1.count > 0 %}<h4><div><span class="results" style="background:#fff1e4;font-size:1.5em;color:#707070;"> There {{ qs1.count|pluralize:"was,were" }} {{ qs1.count }} result{{ qs1.count|pluralize }} for <em>{{ request.GET.q }}</em> in Full Text.</div></span>{% endif %}
@@ -80,7 +80,7 @@
   </div>
   {% endfor %}
   {% if not qs1 %}
-  <div><span class="results" style="background:#fff1e4;font-size:2em;"> There were no results for <em>{{ request.GET.q }}</em>.</span></div>
+  <div><span class="results" style="background:#fff1e4;font-size:2em;"> There were no results for <em>{{ request.GET.q }}</em> in Full Text.</span></div>
   {% endif %}
   </div>
       {% endif %}
@@ -121,7 +121,7 @@
   </div>
   {% endfor %}
   {% if not qs3 %}
-  <div><span class="results" style="background:#fff1e4;font-size:2em;color:#707070;"> There were no results for <em>{{ request.GET.q }}</em>.</span></div>
+  <div><span class="results" style="background:#fff1e4;font-size:2em;color:#707070;"> There were no results for <em>{{ request.GET.q }}</em> in Title/Author/Summary.</span></div>
   {% endif %}
   </div>
       {% endif %}
