--- a/apps/templates/jekyll_export.html
+++ b/apps/templates/jekyll_export.html
@@ -1,8 +1,5 @@
 {% extends "base.html" %}
 {% load static i18n %}
-{% block extra_css %}
-<link href="{% static 'mirador/css/mirador-combined.css' %}" rel="stylesheet">
-{% endblock extra_css %}
 
 {% block content %}
 
@@ -16,10 +13,15 @@
     <div class='uk-width-3-4'>
       <div class='uk-padding'>
         <h3>Static Site Export</h3>
-
-          <div class="alert alert-success">GitHub export started.</div>
-          <p>Your digital edition is being exported to GitHub.  You will receive an email 
-          at {{ email }} when the export is complete.</p>
+          {% if mode == "github" %}
+            <div class="alert alert-success">GitHub export started.</div>
+            <p>Your digital edition is being exported to GitHub.  You will receive an email 
+            at {{ email }} when the export is complete.</p>
+          {% else %}
+            <div class="alert alert-success">Download export started.</div>
+            <p>Your digital edition is being exported.  You will receive an email 
+            at {{ email }} when the export is complete with a link to download the file.</p>
+          {% endif %}
       </div>
 
     </div>
