--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -36,11 +36,15 @@
     <meta property="og:image:width" content="600" />
     {% endif %}{% endfor %}
     {% else %}
+<!-- 
     <meta property="og:title" content="Readux - Emory Center for Digital scholarship - Read, Annotate, Publish" />
     <meta name="twitter:title" content="Readux - Emory Center for Digital scholarship - Read, Annotate, Publish" />
+ -->
+    <meta property="og:title" content="{{ page.title }}" />
+    <meta name="twitter:title" content="{{ page.title }}" />
     <meta property="og:image" content="https://{{ request.META.HTTP_HOST }}/apps/static/images/readux_logo.jpg" />
-    <meta property="og:description" content="{{ page.tagline }}" />
-    <meta name="twitter:description" content="{{ page.tagline }}" />
+    <meta property="og:description" content="{{ page.tagline|striptags }}" />
+    <meta name="twitter:description" content="{{ page.tagline|striptags }}" />
     <!--<meta property="og:url" content="https://readux.ecds.emory.edu" />-->
     {% endif %}
     <meta name="twitter:image:alt" content="Readux Logo - Emory Center for Digital scholarship - Read, Annotate, Publish" />
