--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -48,7 +48,10 @@
     <!--<meta property="og:url" content="https://readux.ecds.emory.edu" />-->
     {% endif %}
     <meta name="twitter:image:alt" content="Readux Logo - Emory Center for Digital scholarship - Read, Annotate, Publish" />
+<!-- 
     <meta property="og:site_name" content="Readux - Emory Center for Digital scholarship - Read, Annotate, Publish" />
+ -->
+    <meta property="og:site_name" content="{{ request.site.site_name }}" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@emorycds" />
     <meta name="twitter:creator" content="@emorycds" />
