--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -55,10 +55,18 @@
         <span uk-search-icon></span>
         <input class="uk-search-input" type="text" placeholder="Search this volume" aria-label="Search" name="q"
           value="{{request.GET.q}}">        
-        <span style="margin-top: 10px;" title="Click to include partial matches">Partial</span>
+        <span style="margin-top: 10px;" title="Click to include partial matches" class="tooltip">Partial<span class="tooltiptext">Searches for your term within any word (end matches end and bend). More specific words work better.</span></span>
+        {% if "exact" in request.GET.type %}
+        <input type="radio" style="margin-top: 6px;" name="type" aria-label="include partial" value="partial">
+        {% else %}
         <input type="radio" style="margin-top: 6px;" name="type" aria-label="include partial" value="partial" checked>
-        <span style="margin-top: 10px;" title="Click for exact matches only">Exact</span>
+        {% endif %}
+        <span style="margin-top: 10px;" title="Click for exact matches only" class="tooltip">Exact<span class="tooltiptext">Searches for your exact term and stems the ending (ends matches end, ends, ended).</span></span>
+        {% if "exact" in request.GET.type %}
+        <input type="radio" style="margin-top: 6px;" name="type" aria-label="exact only" value="exact" checked>
+        {% else %}
         <input type="radio" style="margin-top: 6px;" name="type" aria-label="exact only" value="exact">
+        {% endif %}
         <!-- <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
       </form>
       {% else %}
