--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -99,7 +99,7 @@
                 <ul class="uk-padding-remove">
                   {% for answer in qs1 %}{% if answer.canvas__manifest__label in volume.label %}
                   <li><a
-                      href="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/{{ answer.canvas__pid }}"
+                      href="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/{{ answer.canvas__pid }}?type={{ request.GET.type }}"
                       target="_blank">Canvas {{ answer.canvas__position }} - number of results {{ answer.canvas__position__count }}{{ answer.rank }}</a></li>
                   {% endif %}{% endfor %}</ul>
                 {% elif request.GET.q  and not qs1 %}
@@ -110,7 +110,7 @@
                 <ul class="uk-padding-remove">
                   {% for answer in qs2 %}{% if answer.canvas.manifest.label in volume.label %}
                   <li><a
-                      href="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/{{ answer.canvas.pid }}"
+                      href="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/{{ answer.canvas.pid }}?type={{ request.GET.type }}"
                       target="_blank">Canvas {{ answer.canvas.position }}</a></li>
                   {% endif %}{% endfor %}</ul>
                 {% elif request.GET.q  and not qs2 %}<p>No results in your annotations in this volume</p>
