--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -99,7 +99,7 @@
                 <ul class="uk-padding-remove">
                   {% for answer in qs1 %}{% if answer.canvas__manifest__label in volume.label %}
                   <li><a
-                      href="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/{{ answer.canvas__pid }}?type={{ request.GET.type }}"
+                      href="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/{{ answer.canvas__pid }}?q={{ request.GET.q }}&type={{ request.GET.type }}"
                       target="_blank">Canvas {{ answer.canvas__position }} - number of results {{ answer.canvas__position__count }}{{ answer.rank }}</a></li>
                   {% endif %}{% endfor %}</ul>
                 {% elif request.GET.q  and not qs1 %}
@@ -110,7 +110,7 @@
                 <ul class="uk-padding-remove">
                   {% for answer in qs2 %}{% if answer.canvas.manifest.label in volume.label %}
                   <li><a
-                      href="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/{{ answer.canvas.pid }}?type={{ request.GET.type }}"
+                      href="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/{{ answer.canvas.pid }}?q={{ request.GET.q }}&type={{ request.GET.type }}"
                       target="_blank">Canvas {{ answer.canvas.position }}</a></li>
                   {% endif %}{% endfor %}</ul>
                 {% elif request.GET.q  and not qs2 %}<p>No results in your annotations in this volume</p>
@@ -237,7 +237,7 @@
           url="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/all">
         </v-info-content-url-single>
 
-        {% if "/page/all" in request.get_full_path or "?q=" in request.get_full_path %}
+        {% if "/page/all" in request.get_full_path in request.get_full_path %}
           <v-info-content-url-external
             ref="rx-url-canvas" v-show="false">
           </v-info-content-url-external>
@@ -307,7 +307,7 @@
         canvasID: 'https://{{ request.META.HTTP_HOST }}/iiif/{{ page.manifest.pid }}/canvas/{{ page.pid }}',{% endif %}
         displayLayout: false,
         sidePanel: false,
-        {% if "/page/all" in request.get_full_path or "?q=" in request.get_full_path %}
+        {% if "/page/all" in request.get_full_path in request.get_full_path %}
         canvasID: 'https://{{ request.META.HTTP_HOST }}/iiif/{{ volume.pid }}/canvas/{{ volume.canvas_set.pid.first }}',
         viewType: "ThumbnailsView"
         {% endif %}
