--- a/apps/templates/users/user_list.html
+++ b/apps/templates/users/user_list.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 {% load static i18n %}
 {% block title %}Members{% endblock %}
+{# W don't need to list all users on the frontend #}
 
-{% block content %}
+<!-- {% block content %}
 <div class="container">
   <h2>Users</h2>
 
@@ -14,4 +15,4 @@
     {% endfor %}
   </div>
 </div>
-{% endblock content %}
+{% endblock content %} -->
