Fix tests, minor style/layout changes

--- a/apps/static/css/project.css
+++ b/apps/static/css/project.css
@@ -159,7 +159,7 @@ a.rdx-provider-button:hover {
 }
 
 .uk-button-primary:hover,
-.uk-buton-primary:active {
+.uk-button-primary:active {
   background-color: #e79544;
 }
 
