--- a/apps/templates/account/email.html
+++ b/apps/templates/account/email.html
@@ -23,9 +23,9 @@
       Hello!
       {% endif %}
     </div>
-    <div class="rx-title-tagline">
+    <!-- <div class="rx-title-tagline">
       {{ user.username }}
-    </div>
+    </div> -->
   </div>
 </div>
 
