--- a/apps/static/css/project.css
+++ b/apps/static/css/project.css
@@ -12,38 +12,39 @@
   border-color: #eed3d7;
 }
 
-@media (min-width: 960px) {
+/* @media (min-width: 960px) {
   #viewer {
     width: calc(61% + 15px) !important;
   }
-}
+} */
 
 #viewer {
-  width: 78%;
+  width: 100%;
   height: calc(100% - 193px);
   position: absolute;
+  left: 0;
   bottom: 0px;
   background: none !important;
 }
 
 @media (min-width: 768px) {
-.modal-dialog > .modal-content {
-  top: 200px;
-}
+  .modal-dialog > .modal-content {
+    top: 200px;
+  }
 }
 
 .mirador-container .mirador-viewer {
-    top: -12px !important;
+  top: -12px !important;
 }
 .mirador-container .workspace-container {
-    left: -3px !important;
+  left: -3px !important;
 }
 
 .layout-slot {
-    margin: 0 !important;
+  margin: 0 !important;
 }
 .workspace-container {
-    margin: 0 !important;
+  margin: 0 !important;
 }
 
 .rx-info-container {
@@ -51,21 +52,19 @@
 }
 
 .readux-metadata {
-    word-wrap: break-word;
+  word-wrap: break-word;
 }
 
 .mirador-container .manifest-info {
-    width: auto !important;
-    float: right;
-    z-index: 2;
+  width: auto !important;
+  float: right;
+  z-index: 2;
 }
-
 
 .mirador-container .window-manifest-navigation {
-    float: right;
-    margin-left: 1em;
+  float: right;
+  margin-left: 1em;
 }
-
 
 /* .mirador-container .view-container.focus-max-width {
     margin-left: 0px;
@@ -78,7 +77,6 @@
     box-sizing: border-box;
     z-index: -1;
 } */
- 
 
 .uk-search-default {
   width: 95% !important;
@@ -86,7 +84,7 @@
 
 .manifest-info > a,
 .manifest-info > h3 {
-    display: none !important;
+  display: none !important;
 }
 
 /* .mirador-container .mirador-osd-context-controls {
@@ -99,18 +97,18 @@
 }
 
 .show-annotations span a {
-    background: rgba(255, 20, 147, 0.5);
+  background: rgba(255, 20, 147, 0.5);
 }
 
 .openseadragon-container span {
-    /* background: rgba(0, 255, 255, 0.33); */
-    color: transparent;
-    /* color: deeppink; */
-    display: inline-flex !important;
-    font-size: 100%;
-    line-height: initial;
-    white-space: nowrap;
-    /* outline-style: solid;
+  /* background: rgba(0, 255, 255, 0.33); */
+  color: transparent;
+  /* color: deeppink; */
+  display: inline-flex !important;
+  font-size: 100%;
+  line-height: initial;
+  white-space: nowrap;
+  /* outline-style: solid;
     outline-color: blue; */
 }
 
@@ -247,7 +245,7 @@ ol > li {
 }
 
 ul.listing-thumbs > li > img.thumbnail-image {
-   height: 150px;
+  height: 150px;
 }
 /* 
 ol > li.list {
@@ -306,20 +304,20 @@ ul
 }
 
 .count-icon {
-    display: inline-block;
-    position: relative;
+  display: inline-block;
+  position: relative;
 }
 
 .count {
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding-top: 20%;
-    padding-right: 20%;
-    height: 10px;
-    width: 10px;
-    font-size: 10px;    
-    text-align: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding-top: 20%;
+  padding-right: 20%;
+  height: 10px;
+  width: 10px;
+  font-size: 10px;
+  text-align: center;
 }
 
 #grid {
@@ -626,7 +624,7 @@ header#page-bg .collection-image-info.collasped .info {
 }
 
 #rx-sort {
-  position:sticky;
+  position: sticky;
   top: 72px;
 }
 
@@ -801,9 +799,9 @@ p {
     left: 5%;
     right: 5%;
     background: white; */
-    /* position: sticky;
+  /* position: sticky;
     top: 0; */
-    background: white;
+  background: white;
 }
 
 .rx-splash {
@@ -818,7 +816,6 @@ p {
 }
 
 .rx-splash-item {
-  
 }
 
 .rx-grid-right {
@@ -831,12 +828,13 @@ p {
   }
 }
 
-
 .rx-btn {
   border-radius: 3px;
   border: solid 1px #707070;
   color: #707070;
-  font-family: HelveticaNeue, Helvetica, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: HelveticaNeue, Helvetica, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol";
   font-size: 14px;
   font-weight: 500;
   line-height: 1.28;
@@ -846,19 +844,20 @@ p {
   display: inline-block;
 }
 
-.rx-btn:hover{
+.rx-btn:hover {
   border: solid 1px #707070;
   color: white;
   background: #707070;
-  transition: .1s ease-in-out;
-
+  transition: 0.1s ease-in-out;
 }
 
 .rx-btn-extension {
   border-radius: 3px;
   border: solid 1px #707070;
   color: #707070;
-  font-family: HelveticaNeue, Helvetica, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: HelveticaNeue, Helvetica, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol";
   font-size: 15px;
   font-weight: 600;
   line-height: 1.28;
@@ -867,27 +866,26 @@ p {
   text-align: center;
   padding: 8px 16px;
   display: inline-block;
-    background: #ea7c0f;
+  background: #ea7c0f;
   color: white;
   border: solid 1px #ea7c0f;
 }
 
-.rx-btn:hover{
+.rx-btn:hover {
   border: solid 1px #707070;
   color: white;
   background: #707070;
-  transition: .1s ease-in-out;
+  transition: 0.1s ease-in-out;
   cursor: pointer;
 }
 
-
-.rx-btn-extension:hover{
-  background: #FF7F00;
+.rx-btn-extension:hover {
+  background: #ff7f00;
   color: white;
-  border: solid 1px #FF7F00;
-  transition: .1s ease-in-out;
+  border: solid 1px #ff7f00;
+  transition: 0.1s ease-in-out;
   opacity: 1;
-  cursor:pointer;
+  cursor: pointer;
 }
 
 .uk-navbar-nav {
@@ -899,8 +897,8 @@ p {
 }
 
 .rx-footer {
-  display:flex;
-  list-style:none;
+  display: flex;
+  list-style: none;
   font-weight: bold;
 }
 
@@ -933,8 +931,8 @@ p {
 }
 
 .rx-label-copy:active {
-  background-color: #C0660D !important;
-  border: 1px solid #C0660D !important;
+  background-color: #c0660d !important;
+  border: 1px solid #c0660d !important;
   opacity: 1;
 }
 
@@ -980,7 +978,9 @@ p {
   width: initial !important;
 }
 
-.mirador-container .mirador-viewer a.mirador-icon-view-type, .mirador-container .mirador-viewer a.mirador-icon-metadata-view, .mirador-container .mirador-viewer a.mirador-osd-fullscreen {
+.mirador-container .mirador-viewer a.mirador-icon-view-type,
+.mirador-container .mirador-viewer a.mirador-icon-metadata-view,
+.mirador-container .mirador-viewer a.mirador-osd-fullscreen {
   padding: 5px;
   margin: 0;
 }
@@ -1016,7 +1016,6 @@ p {
   text-align: center;
   color: white;
 } */
-
 
 .rx-image-container > figure {
   margin: auto;
@@ -1074,22 +1073,20 @@ p {
   -o-transition: opacity 150ms ease-in-out;
 }
 
-.uk-tab>.uk-active>a {
+.uk-tab > .uk-active > a {
   border-color: #ea7c0f !important;
   color: #ea7c0f;
 }
 
 .rx-email-status {
-  
 }
 
 .rx-collection-title {
   font-weight: bold;
   color: #707070;
-
 }
 
-/* Grid layout */ 
+/* Grid layout */
 
 .rx-grid {
   display: grid;
@@ -1100,7 +1097,6 @@ p {
   /* justify-content: space-between; */
 }
 
-
 .rx-grid-layout {
   height: 425px;
   width: 275px;
@@ -1110,17 +1106,15 @@ p {
 }
 
 .rx-grid:hover {
-
 }
 
-.rx-grid-image-container>img {
+.rx-grid-image-container > img {
   object-fit: cover;
   height: 400px;
   /* width: 200px; */
   width: 100%;
   /* height: 100%; */
 }
-
 
 /* Banner Layout */
 .rx-banner-layout {
@@ -1153,12 +1147,13 @@ p {
 }
 
 .rx-banner-text-container {
-  position:absolute;
-  left:0;
-  bottom:0;
+  position: absolute;
+  left: 0;
+  bottom: 0;
   padding: 1rem;
   color: #eeeeee;
-  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .rx-title-tagline-banner {
@@ -1170,12 +1165,10 @@ p {
   font-size: 1.5rem;
 }
 
-
 .rx-sticky {
   position: sticky;
   top: 0;
 }
-
 
 /*mirador overrides*/
 
@@ -1188,14 +1181,16 @@ p {
   margin-left: initial;
 }
 
-
-.mirador-container .mirador-viewer a.mirador-icon-view-type, .mirador-container .mirador-viewer a.mirador-icon-metadata-view, .mirador-container .mirador-viewer a.mirador-osd-fullscreen {
+.mirador-container .mirador-viewer a.mirador-icon-view-type,
+.mirador-container .mirador-viewer a.mirador-icon-metadata-view,
+.mirador-container .mirador-viewer a.mirador-osd-fullscreen {
   display: flex;
   flex-direction: row;
-
 }
 
-.mirador-container .mirador-viewer a.mirador-icon-view-type, .mirador-container .mirador-viewer a.mirador-icon-metadata-view, .mirador-container .mirador-viewer a.mirador-osd-fullscreen {
+.mirador-container .mirador-viewer a.mirador-icon-view-type,
+.mirador-container .mirador-viewer a.mirador-icon-metadata-view,
+.mirador-container .mirador-viewer a.mirador-osd-fullscreen {
   margin-right: 0 !important;
   padding-bottom: 0 !important;
 }
