--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -5,27 +5,32 @@
 {% endblock extra_css %}
 
 {% block content %}
-<div class="rx-title-container">
-  <ul class="rx-breadcrumb uk-text-truncate">
-    <li class="rx-breadcrumb-item"><a href="/" alt="Home">Home</a></li>
-    <li class="rx-breadcrumb-item"><a href="/{{ collectionlink.slug }}" alt="Collections">Collections</a></li>
-    <li class="rx-breadcrumb-item"><a href="{% url 'collection' volume.collections.first.pid %}"
-        alt="Collections">{{ volume.collections.first.label }}</a></li>
-  </ul>
-  <div class="rx-title uk-text-truncate">{{volume.label}}</div>
-</div>
 
-{% endblock content %}
+  <nav class="" uk-navbar id="rx-nav">
+    <div class="uk-navbar-left" style="flex-wrap: nowrap; flex: 0 0 auto;">
+      <a class="uk-navbar-item uk-logo uk-padding-remove-left" href="/">
+        <img src="{% static 'images/readux.svg' %}" style="width: 50px; padding: 0 0 0 0" alt="Readux">
+      </a>
+      <div class="uk-navbar-nav">
+        <div class="rx-page-title-container" style="flex: 2 2 auto; align-self: center;">
+          <ul class="rx-page-breadcrumb" style="font-size: 0.75em;">
+            <li class="rx-page-breadcrumb-item"><a href="/" alt="Home">Home</a></li>
+            <li class="rx-page-breadcrumb-item"><a href="/{{ collectionlink.slug }}" alt="Collections">Collections</a></li>
+            <li class="rx-page-breadcrumb-item"><a href="{% url 'collection' volume.collections.first.pid %}"
+                alt="Collections">{{ volume.collections.first.label }}</a></li>
+          </ul>
+          <div class="rx-page-title">{{volume.label}}</div>
+        </div>
+      </div>
+    </div>
+    <div class="uk-navbar-right">
+      <a type="button" @click="toggleMoreInfo" class="no-selection rx-btn-main" v-bind:class="{ 'rx-btn-main-active' : showMoreInfo  }">
+          more info 
+      </a>
+    </div>
+  </nav>
 
-{% block viewer %}
-
-<div class="uk-flex-middle" uk-grid data-uk-grid-match>
-  <div class="uk-width-2-3@m uk-flex-first">
-    <div id="viewer"></div>
-  </div>
-
-  <div class="uk-width-1-3@m rx-info-container">
-
+  <div class="rx-info-container" v-if="showMoreInfo">
     <div class="rx-info">
       <!-- new search form -->
       {% if page.pid is not None %}
@@ -104,9 +109,7 @@
         </ul>
         <!-- The my annotations elements will need to be cleaned up when the annotation model changes are fully finished. -->
         {% endif %}
-
         <!--new-->
-        
 
         <div class="rx-info-content">
           <div class="rx-info-content-label">Authors</div>
@@ -164,11 +167,12 @@
         {% if user_annotation_count > 0 %}
         <div class="rx-info-content">
           <form action="{% url 'export' volume.pid %}" class="button_to" method="GET" id="rx-annotation-export-form">
-            <a class="rx-action-btn" href="#" onclick="rxFormSubmit('rx-annotation-export-form');">Export Annotations</a>
+            <a class="rx-action-btn" href="#" onclick="rxFormSubmit('rx-annotation-export-form');">Export
+              Annotations</a>
             {% csrf_token %}
           </form>
         </div>
-        
+
         {% endif %}
 
       </div>
@@ -178,14 +182,14 @@
       <div class="rx-info-title">URLs</div>
       <div class="rx-info-content-container">
 
-        <v-info-content-url-single
-          label="Manifest"
+        <v-info-content-url-single label="Manifest"
           url="https://{{ request.META.HTTP_HOST }}{% url 'ManifestRender' 'v2' volume.pid %}">
         </v-info-content-url-single>
 
         <v-info-content-url-multiple label="Collection Manifest">
           {% for col in volume.collections.all %}
-            <v-info-content-url-unit url="https://{{ request.META.HTTP_HOST }}{% url 'CollectionRender' 'v2' col.pid %}"></v-info-content-url-unit>
+          <v-info-content-url-unit url="https://{{ request.META.HTTP_HOST }}{% url 'CollectionRender' 'v2' col.pid %}">
+          </v-info-content-url-unit>
           {% endfor %}
         </v-info-content-url-multiple>
 
@@ -196,17 +200,14 @@
         {% if page.pid is not None %}
 
         {% if "/page/all" in request.get_full_path or "?q=" in request.get_full_path %}
-          <v-info-content-url-external 
-            ref="rx-url-canvas" v-show="false">
-          </v-info-content-url-external>
+        <v-info-content-url-external ref="rx-url-canvas" v-show="false">
+        </v-info-content-url-external>
         {% else %}
-        <v-info-content-url-external 
-          ref="rx-url-canvas">
+        <v-info-content-url-external ref="rx-url-canvas">
         </v-info-content-url-external>
         {% endif %}
 
-        <v-info-content-url-external 
-          ref="rx-url-stable-page">
+        <v-info-content-url-external ref="rx-url-stable-page">
         </v-info-content-url-external>
         {% endif %}
       </div>
@@ -217,7 +218,13 @@
     <!-- end ocr el -->
   </div>
 
-</div>
+
+{% endblock content %}
+
+{% block viewer %}
+
+<div id="viewer"></div>
+  
 
 
 
