--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -2,6 +2,11 @@
 {% load static i18n %}
 {% block extra_css %}
 <link href="{{ mirador_url }}css/mirador-combined.css" rel="stylesheet">
+<style>
+  #rx-nav {
+    display: none;
+  }
+</style>
 {% if request.get_host == "readux2.ecdsdev.org" %}
 <style>
 #viewer {
@@ -36,7 +41,7 @@
   <div class="rx-title uk-text-truncate" title="{{ volume.label }}">{{volume.label}}</div>
 </div> -->
 
-  <nav class="" uk-navbar id="rx-nav">
+  <nav class="" uk-navbar id="rx-page-info-panel">
     <div class="uk-navbar-left rx-page-navbar-left" style="flex-wrap: unset;">
       <a class="uk-navbar-item uk-logo uk-padding-remove-left rx-page-logo" href="/">
         <img src="{% static 'images/readux.svg' %}" style="width: 50px; padding: 0 0 0 0" alt="Readux">
@@ -61,29 +66,48 @@
   </nav>
 
   <div class="rx-info-container" v-if="showMoreInfo">
+
+    <div class="rx-info">
+      <a type="button" @click="toggleMoreInfo" class="rx-page-info-btn"
+        v-bind:class="{ 'rx-btn-main-active' : showMoreInfo  }">
+        <span class="uk-icon uk-icon-button" aria-hidden="true" uk-icon="icon: close"
+          uk-tooltip="title: Close this panel; pos: right"></span> close
+      </a>
+    </div>
+
     <div class="rx-info">
       <!-- new search form -->
-      {% if page.pid is not None %}
-      <form class="uk-search uk-search-default" style="width: 100% !important; display: flex;"
-        action="{% url 'page' volume.pid page.pid %}" method="get" accept-charset="utf-8">
-        <span uk-search-icon></span>
-        <input class="uk-search-input" type="text" placeholder="Search this volume" aria-label="Search" name="q"
-          value="{{request.GET.q}}">        
-        <span style="margin-top: 10px;" title="Click to include partial matches">Partial</span>
-        <input type="radio" style="margin-top: 6px;" name="type" aria-label="include partial" value="partial" checked>
-        <span style="margin-top: 10px;" title="Click for exact matches only">Exact</span>
-        <input type="radio" style="margin-top: 6px;" name="type" aria-label="exact only" value="exact">
-        <!-- <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
-      </form>
-      {% else %}
-      <form class="uk-search uk-search-default" style="width: calc(100% - 42px) !important;"
-        action="{% url 'volumeall' volume.pid %}" method="get" accept-charset="utf-8">
-        <span uk-search-icon></span>
-        <input class="uk-search-input" type="text" placeholder="Search this volume" aria-label="Search" name="q"
-          value="{{request.GET.q}}">
-        <!-- <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
-      </form>
-      {% endif %}
+      <nav class="uk-navbar-container" uk-navbar>
+          <div class="uk-navbar-item" style="width: 100%;">
+            {% if page.pid is not None %}
+            <form class="uk-search uk-search-default uk-search-navbar rx-page-search-container" 
+              action="{% url 'page' volume.pid page.pid %}" method="get" accept-charset="utf-8">
+              <div>
+                <span uk-search-icon></span>
+                <input class="uk-search-input rx-search-input" type="text" placeholder="Search this volume" aria-label="Search" name="q"
+                value="{{request.GET.q}}">
+              </div>
+              <div class="uk-margin uk-grid-small uk-child-width-auto uk-grid rx-page-search-options">
+                <label title="Click to include partial matches" class="rx-page-search-option-label"><input class="uk-radio" type="radio" name="type" checked
+                    aria-label="include partial" value="partial"> Partial</label>
+                <label title="Click for exact matches only" class="rx-page-search-option-label"><input class="uk-radio" type="radio" name="type" aria-label="exact only"
+                    value="exact"> Exact</label>
+              </div>
+              <!-- <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
+            </form>
+            {% else %}
+            <form class="uk-search uk-search-default"
+              action="{% url 'volumeall' volume.pid %}" method="get" accept-charset="utf-8">
+              <span uk-search-icon></span>
+              <input class="uk-search-input" type="text" placeholder="Search this volume" aria-label="Search" name="q"
+                value="{{request.GET.q}}">
+              <!-- <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
+            </form>
+
+            {% endif %}
+          </div>
+      </nav>
+
       <!-- new search form -->
     </div>
 
