search opens in same window and some aria labels

--- a/apps/static/css/project.css
+++ b/apps/static/css/project.css
@@ -1303,3 +1303,12 @@ em {
 .tooltip:hover .tooltiptext {
   visibility: visible;
 }
+
+legend {
+}
+
+fieldset {
+  margin: inherit;
+  border: 0;
+  padding: inherit;
+}
